# jpgram

./: LICENSE  README.md  commands.md
jpgram/:  build_files.sh  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
jpgram/jpgram/: asgi.py  settings.py  urls.py  wsgi.py
jpgram/magazine/: apps.py  models.py  urls.py  views.py
jpgram/magazine/static/: text.txt
jpgram/magazine/static/magazine/: args.txt  latest-stamps.ini
jpgram/magazine/static/magazine/cice_jiit/: 2018-07-24_17-03-38_UTC.txt  2018-07-25_05-21-32_UTC.txt  2018-07-26_04-35-35_UTC.txt  2018-07-26_05-49-42_UTC.txt  2018-07-26_16-35-51_UTC.txt  2018-07-28_09-31-03_UTC.txt  2018-07-31_03-31-05_UTC.txt  2018-07-31_03-31-52_UTC.txt  2018-08-01_04-51-47_UTC.txt  2018-08-04_14-41-39_UTC.txt  2018-08-04_16-21-34_UTC.txt  2018-08-11_16-28-52_UTC.txt  2018-08-11_16-33-26_UTC.txt  2018-08-11_16-38-31_UTC.txt  2018-08-15_05-14-34_UTC.txt  2018-09-10_18-37-53_UTC.txt  2018-09-11_19-04-27_UTC.txt  2018-10-02_06-26-20_UTC.txt  2018-10-07_20-33-27_UTC.txt  2018-10-15_09-49-37_UTC.txt  2018-11-15_08-22-10_UTC.txt  2018-11-17_04-47-07_UTC.txt  2018-11-21_10-38-31_UTC.txt  2019-07-25_17-06-31_UTC.txt  2019-07-26_15-22-44_UTC.txt  2019-07-29_08-27-28_UTC.txt  2019-07-31_16-06-21_UTC.txt  2019-07-31_16-07-12_UTC.txt  2019-07-31_16-24-40_UTC.txt  2019-08-14_17-04-02_UTC.txt  2019-08-15_07-13-07_UTC.txt  2019-08-15_07-21-01_UTC.txt  2019-08-21_07-09-34_UTC.txt  (+216 more)
jpgram/magazine/templates/magazine/: jiit.impressions.html  knuth_jiit.html  osdcjiit.html
jpgram/templates/: base.html
(+2698 files in other folders)
