[tool.poetry]
name = "jpgram"
version = "0.1.0"
description = ""
authors = ["codeblech <my.malikyash@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
instaloader = "^4.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
